# datastruct

./: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  datastruct.cbp  list.c  list.h  main.c  trees.cbp
dllist/: dllist.c  dllist.cbp
hash/: CMakeLists.txt  hash.c  set.c  set_test.c
include/: dllist.h  hash.h  queue.h  set.h  sllist.h  stack.h  tree.h
list/: CMakeLists.txt  Makefile  dllist.c  dllist.h  dllist_test.c  list.c  list.cbp  main.c  sllist.c  sllist.h
list/tests/: ordered.txt
tests/: CMakeLists.txt  Makefile  dllist_test.c  hash_test.c  hash_to_tree.c  sllist_test.c  stack_test.c  tree_test.c  words.txt
tests/data/: words.txt
tree/: CMakeLists.txt  tree.c
